@@ -1,3 +1,9 @@
+2010-06-21  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Added
+	  test for 'Bug 615702 - In-place variable renaming can't
+	  rename foreach loop variables'.
+
 2010-06-18  Mike Krüger  <mkrueger@novell.com>
 
 	* Mono.TextEditor.Tests/ViTests.cs: Set flag required for one
